--- a/Scripts/cascada.css
+++ b/Scripts/cascada.css
@@ -1,6 +1,7 @@
-html,body, h1,h2,h3,h4,h5, p, div{
+*{
    margin: 0px;
    padding: 0px;
+   color:white;
 }
 
 body{
@@ -11,10 +12,19 @@ body{
 
 header{
 width: 100%;
-height: 20vh;
+height: 30vh;
 background-color: rgb(224, 227, 61);
 }
-div{
-   height: 150vh;
 
+h1{
+   font-size: 4em;
+   color:white;
+   text-align: center;
+}
+.parallax-window{
+   height: 100vh;
+   width: 100%;
+}
+div{
+   width: 100%;
 }
