--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,85 @@
 *{margin: 0px; padding: 0px;}
+
 body{
    width: 100%;
    height: auto;
+   /* NOTE: Dando Flex */
+   display: flex;
+   flex-direction: column;
 }
+
+/* NOTE: Empiezan los estilos de la cabecera */
+header{
+   width: 100%;
+   height: 8em;
+   background-color: rgb(233, 106, 82);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   font-size: 2em;
+}
+
+
+nav{
+   width: 100%;
+   margin-top: 3em;
+}
+
+nav>ul{
+   width: 100%;
+   display: flex;
+   justify-content: space-around;
+}
+
+header > nav > ul{
+   list-style: none;
+}
+
+h2,h3{
+   font-size: 3em;
+}
+.parrafo{
+   font-size: 1.5em;
+}
+
+
+/***********************Terminan los estilos de la cabecera*********************/
+
+
 
 .parallax{
    width: 100%;
    height: 600px;
+}
+
+
+
+
+
+/*****************Tiny tweaks****************/
+
+
+@media (max-width: 1200px){
+   header{
+      font-size: 1.3em;
+   }
+   h2,h3{
+      font-size: 2em;
+   }
+   .parrafo{
+      font-size: 1.3em;
+   }
+}
+
+@media (max-width: 720px){
+   h1{
+      font-size: 1.3em;
+   }
+   h2,h3{
+      font-size: 1.5em;
+   }
+   .parrafo{
+      font-size: 1.1em;
+
+   }
 }
