--- a/estilos.css
+++ b/estilos.css
@@ -37,9 +37,17 @@ header > nav > ul{
 
 h2,h3{
    font-size: 3em;
+   text-indent: 20px;
+}
+
+.dividida,.superPolifil,.productos, .socios,footer{
+   width: 100%;
 }
 .parrafo{
+   width: calc(100% -1.5em);
+   margin: 1.5em;
    font-size: 1.5em;
+   text-align: justify;
 }
 
 
@@ -75,11 +83,31 @@ h2,h3{
    h1{
       font-size: 1.3em;
    }
+
    h2,h3{
       font-size: 1.5em;
    }
+
    .parrafo{
       font-size: 1.1em;
+   }
 
+   .off-canvas{
+   flex-wrap: wrap;
+   width: 100%;
+   height: 100vh;
+   transform: translate(-100%, 0);
+   transition: transform 0.3s ease-out;
+   z-index: 1;
+   }
+
+   .elem{
+      width: 100%;
+      background-color: rgb(246, 152, 75);
+   }
+
+   .open{
+      /* NOTE: Se agrega con JS */
+      transform: translate(0,0);
    }
 }
