--- a/estilos.css
+++ b/estilos.css
@@ -96,8 +96,13 @@ h2,h3{
    flex-wrap: wrap;
    width: 100%;
    height: 100vh;
+   position: absolute;
+   top: 0px;
    transform: translate(-100%, 0);
    transition: transform 0.3s ease-out;
+   line-height: 5em;
+   text-align: center;
+   font-weight: bold;
    z-index: 1;
    }
 
