--- a/estilos.css
+++ b/estilos.css
@@ -8,6 +8,13 @@ body{
    flex-direction: column;
 }
 
+img{
+   max-width: 100%;
+}
+picture{
+   width: 90%;
+}
+
 /* NOTE: Empiezan los estilos de la cabecera */
 header{
    width: 100%;
@@ -93,8 +100,32 @@ h3{
 }
 
 
-/***********************Terminan los estilos del main y sus elementos*********/
+/***********************Swiper Slider*********/
+.swiper-container {
+   margin-top: 2em;
+   margin-bottom: 2em;
+    width: 100%;
+    height: 90vh;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
 
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
 
 /*****************Tiny-Tweaks , Off-Canvas****************/
 
@@ -135,7 +166,7 @@ h3{
    line-height: 5em;
    text-align: center;
    font-weight: bold;
-   z-index: 1;
+   z-index: 2;
    }
 
    .elem{
