--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-*{margin: 0px; padding: 0px;}
+*,p{margin: 0px; padding: 0px;}
 
 body{
    width: 100%;
@@ -143,6 +143,43 @@ h3{
    margin: 2.5%;
 }
 
+
+.contenedor{
+   width: 100%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   height: 300px;
+   background-color: rgb(225, 170, 242);
+}
+
+.elemento{
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+}
+.elemento > img{
+   height: 300px;
+}
+
+.deImg{
+   margin: 0px;
+   padding: 0px;
+   width: 100%;
+   height: 100%;
+   text-align: center;
+   background-color: rgba(0, 0, 0, 0.8);
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+   top: -304px;
+   transition: all .5s;
+}
+.deImg:hover{
+top: 0;
+}
 
 /*****************Tiny-Tweaks , Off-Canvas****************/
 
