--- a/estilos.css
+++ b/estilos.css
@@ -19,17 +19,26 @@ picture{
 header{
    width: 100%;
    height: 8em;
-   background-color: rgb(233, 106, 82);
+   background-color: rgb(245, 64, 29);
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 2em;
 }
-
-
+h1{
+   font-family: Playfair Display;
+   color: rgb(242, 205, 7);
+}
+.iconos{
+   margin-top: 10px;
+   width: 100%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+}
 nav{
    width: 100%;
-   margin-top: 3em;
+   margin-top: 1em;
 }
 
 nav>ul{
@@ -170,6 +179,7 @@ h3{
    text-align: center;
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
+   font-size: 1.2em;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -198,6 +208,7 @@ top: 0;
 }
 
 @media (max-width: 720px){
+
    h1{
       font-size: 1.3em;
    }
@@ -226,11 +237,19 @@ top: 0;
 
    .elem{
       width: 100%;
-      background-color: rgb(246, 152, 75);
+      background-color:rgb(245, 64, 29);
+      color: rgb(249, 241, 50);
+      border-bottom: 1px solid;
    }
 
    .open{
       /* NOTE: Se agrega con JS */
       transform: translate(0,0);
+   }
+   #menuBoton{
+      margin-top: 5px;
+      width: 32px;
+      height: 32px;
+      background: url("Plugs_Scripts/Imagenes/menu2.png");
    }
 }
