--- a/estilos.css
+++ b/estilos.css
@@ -18,27 +18,40 @@ picture{
 /* NOTE: Empiezan los estilos de la cabecera */
 header{
    width: 100%;
-   height: 8em;
+   height: 15em;
    background-color: rgb(245, 64, 29);
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   font-size: 2em;
+}
+.nombre{
+   width: 40%;
+   height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
-   font-size: 2em;
 }
 h1{
    font-family: Playfair Display;
    color: rgb(242, 205, 7);
 }
 .iconos{
+   width: 180px;
+   height: 140px;
    margin-top: 10px;
-   width: 100%;
    display: flex;
-   justify-content: space-around;
+   flex-wrap: wrap;
+   justify-content: center;
    align-items: center;
+}
+.item{
+   width: 60%;
+   display: flex;
+   justify-content: center;
 }
 nav{
    width: 100%;
-   margin-top: 1em;
 }
 
 nav>ul{
@@ -199,6 +212,16 @@ top: 0;
 @media (max-width: 1200px){
    header{
       font-size: 1.3em;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+   }
+   .iconos{/*Se despliegan los iconos*/
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
    }
    h2,h3{
       font-size: 2em;
@@ -209,6 +232,19 @@ top: 0;
 }
 
 @media (max-width: 720px){
+
+   header{
+      font-size: 1.2em;
+      display: flex;
+      flex-direction: column;
+   }
+   .iconos{
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+   }
 
    h1{
       font-size: 1.3em;
