--- a/estilos.css
+++ b/estilos.css
@@ -18,7 +18,7 @@ picture{
 /* NOTE: Empiezan los estilos de la cabecera */
 header{
    width: 100%;
-   height: 15em;
+   height: 9em;
    background-color: rgb(245, 64, 29);
    display: flex;
    align-items: center;
@@ -213,14 +213,17 @@ top: 0;
    header{
       font-size: 1.3em;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: flex-start;
+      align-items: center;
    }
-   .iconos{/*Se despliegan los iconos*/
+   .iconos{
+      width: 180px;
+      height: 140px;
       margin-top: 10px;
-      width: 100%;
       display: flex;
-      justify-content: space-around;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
    }
    h2,h3{
@@ -231,7 +234,7 @@ top: 0;
    }
 }
 
-@media (max-width: 720px){
+@media (max-width: 820px){
 
    header{
       font-size: 1.2em;
@@ -248,6 +251,7 @@ top: 0;
 
    h1{
       font-size: 1.3em;
+      z-index: -10;
    }
 
    h2,h3{
