--- a/estilos.css
+++ b/estilos.css
@@ -25,6 +25,7 @@ header{
    flex-direction: column;
    align-items: center;
    font-size: 2em;
+   color: rgb(224, 193, 28);
 }
 h1{
    font-family: Playfair Display;
@@ -55,6 +56,7 @@ header > nav > ul{
 h2,h3{
    font-size: 3em;
    text-indent: 20px;
+   color: rgb(252, 118, 32);
 }
 
 .superPolifil,.productos, .socios,footer{
@@ -65,6 +67,7 @@ h2,h3{
    margin: 1.5em;
    font-size: 1.5em;
    text-align: justify;
+   color: rgb(231, 207, 39);
 }
 
 
