--- a/estilos.css
+++ b/estilos.css
@@ -19,34 +19,28 @@ picture{
 /* NOTE: Empiezan los estilos de la cabecera */
 header{
    width: 100%;
-   height: 9em;
+   height: 8em;
    background-color: rgb(245, 64, 29);
    display: flex;
+   flex-direction: column;
    align-items: center;
-   justify-content: space-around;
    font-size: 2em;
    color: rgb(224, 193, 28);
 }
-
 h1{
    font-family: Playfair Display;
    color: rgb(242, 205, 7);
 }
 .iconos{
-   width: 180px;
-   height: 140px;
    margin-top: 10px;
+   width: 100%;
    display: flex;
-   justify-content: center;
+   justify-content: space-around;
    align-items: center;
-}
-.item{
-   width: 60%;
-   display: flex;
-   justify-content: center;
 }
 nav{
    width: 100%;
+   margin-top: 1em;
 }
 
 nav>ul{
@@ -207,19 +201,6 @@ top: 0;
 @media (max-width: 1200px){
    header{
       font-size: 1.3em;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-   }
-   .iconos{
-      width: 180px;
-      height: 140px;
-      margin-top: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
    }
    h2,h3{
       font-size: 2em;
@@ -248,24 +229,10 @@ top: 0;
 
 }
 
-@media (max-width: 820px){
-
-   header{
-      font-size: 1.2em;
-      display: flex;
-      flex-direction: column;
-   }
-   .iconos{
-      margin-top: 10px;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-   }
+@media (max-width: 720px){
 
    h1{
       font-size: 1.3em;
-      z-index: -10;
    }
 
    h2,h3{
