--- a/estilos.css
+++ b/estilos.css
@@ -28,7 +28,9 @@ header{
    color: rgb(224, 193, 28);
 }
 h1{
-   font-family: Playfair Display;
+   font-family:Yellowtail;
+   word-spacing: 15px;
+   letter-spacing: 8px;
    color: rgb(242, 205, 7);
 }
 .iconos{
@@ -37,6 +39,9 @@ h1{
    display: flex;
    justify-content: space-around;
    align-items: center;
+}
+.elem{
+   font-family: Rakkas;
 }
 nav{
    width: 100%;
@@ -57,17 +62,26 @@ h2,h3{
    font-size: 3em;
    text-indent: 20px;
    color: rgb(252, 118, 32);
+   font-family: Yellowtail;
 }
 
 .superPolifil,.productos, .socios,footer{
    width: 100%;
 }
+.polifil{
+   font-size: 4em;
+}
 .parrafo{
    width: calc(100% -1.5em);
    margin: 1.5em;
-   font-size: 1.5em;
+   font-family: Sansita One;
+   font-size: 1.3em;
    text-align: justify;
    color: rgb(231, 207, 39);
+}
+.parrafo1{
+   margin: 1em;
+   font-size: 1.7em;
 }
 
 
@@ -87,9 +101,9 @@ h2,h3{
 }
 .superPolifil{
    display: flex;
+   flex-direction: column;
    width: 100%;
    height: 100vh;
-   flex-wrap: wrap;
 }
 h3{
    line-height: 100px;
@@ -103,7 +117,9 @@ h3{
    justify-content: center;
    align-content: center;
 }
-
+.mapa{
+  font-size: 4.5em;
+}
 
 #gmap{
    width: 80%;
@@ -119,8 +135,8 @@ h3{
 .swiper-container {
    margin-top: 2em;
    margin-bottom: 2em;
-    width: 100%;
-    height: 90vh;
+   width: 100%;
+   height: 90vh;
 }
 .swiper-slide {
     text-align: center;
@@ -144,20 +160,6 @@ h3{
 
 
 /***********************Muestras.**************************/
-
-/*.productos{
-   width: 100%;
-   height: 600px;
-   display: flex;
-   justify-content: space-around;
-   align-items: center;
-}
-
-.servicios{
-   width: calc((100%/4) - 2.5%);
-   margin: 2.5%;
-}*/
-
 
 .contenedor{
    width: 100%;
@@ -202,8 +204,11 @@ top: 0;
    header{
       font-size: 1.3em;
    }
+   h1{
+      font-size: 2.5;
+   }
    h2,h3{
-      font-size: 2em;
+      font-size: 2.5em;
    }
    .parrafo{
       font-size: 1.3em;
@@ -225,8 +230,16 @@ top: 0;
       width: 100%;
       height: 300px;
    }
-
-
+   .polifil{
+      font-size: 3em;
+   }
+   .parrafo1{
+      margin: 1em;
+      font-size: 1.4em;
+   }
+   .mapa{
+     font-size: 3.5em;
+   }
 }
 
 @media (max-width: 720px){
@@ -236,11 +249,11 @@ top: 0;
    }
 
    h2,h3{
-      font-size: 1.5em;
+      font-size: 2em;
    }
 
    .parrafo{
-      font-size: 1.1em;
+      font-size: 1.2em;
    }
 
    .off-canvas{
@@ -311,5 +324,27 @@ top: 0;
    top: 0;
    }
 
+   .polifil{
+      font-size: 2em;
+   }
+   .parrafo1{
+      margin: 1em;
+      font-size: 1.2em;
+   }
+   .mapa{
+     font-size: 2.5em;
+   }
 
+}
+
+@media (max-width: 420px){
+   .superPolifil{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 125vh;
+   }
+   .mapa{
+     font-size: 2em;
+   }
 }
