--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@ body{
    /* NOTE: Dando Flex */
    display: flex;
    flex-direction: column;
-   background-color: rgb(106, 106, 106);
+   background-color: rgb(147, 142, 142);
 }
 
 img{
@@ -54,7 +54,7 @@ nav>ul{
    justify-content: space-around;
 }
 
-header > nav > ul{
+ ul{
    list-style: none;
 }
 
@@ -83,7 +83,9 @@ h2,h3{
    margin: 1em;
    font-size: 1.7em;
 }
-
+.bentonita{
+   text-decoration: underline;
+}
 
 
 /***********************Terminan los estilos de la cabecera*********************/
@@ -108,28 +110,6 @@ h2,h3{
 h3{
    line-height: 100px;
 }
-
-
-/*Contenedor del Mapa de Google.*/
-.container{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   align-content: center;
-}
-.mapa{
-  font-size: 4.5em;
-}
-
-#gmap{
-   width: 80%;
-   height: 450px;
-   max-width: 100%;
-   max-height: 100vh;
-   box-shadow: 2px 2px 2px 2px;
-   margin-bottom: 20px;
-}
-
 
 /***********************Swiper Slider*********/
 .swiper-container {
@@ -197,6 +177,58 @@ h3{
 .deImg:hover{
 top: 0;
 }
+
+
+/*Empiezan los estilos del footer.*/
+.container{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-content: center;
+}
+.mapa{
+  font-size: 4.5em;
+}
+
+#gmap{
+   width: 80%;
+   height: 450px;
+   max-width: 100%;
+   max-height: 100vh;
+   box-shadow: 2px 2px 2px 2px;
+   margin-bottom: 20px;
+}
+.social{
+   width: 100%;
+   height: auto;
+   display: flex;
+   flex-direction: column;
+   color: rgb(244, 148, 37);
+}
+
+.sociales, .copiright{
+   width: 100%;
+   height: 3em;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: rgb(17, 16, 13);
+}
+   .so{
+      width: 100%;
+      height: 3em;
+      background-color: rgb(17, 16, 13);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+.sociales1{
+   width: 15em;
+   height: auto;
+   display: flex;
+   justify-content: space-between;
+ }
+
 
 /*****************Tiny-Tweaks , Off-Canvas****************/
 
@@ -337,7 +369,7 @@ top: 0;
 
 }
 
-@media (max-width: 420px){
+@media (max-width: 450px){
    .superPolifil{
       display: flex;
       flex-direction: column;
