--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,8 @@ body{
    /* NOTE: Dando Flex */
    display: flex;
    flex-direction: column;
-   background-color: rgb(147, 142, 142);
+   /*background-color: rgb(147, 142, 142);*/
+   background-color: #6c6c6c;
 }
 
 img{
@@ -191,7 +192,8 @@ top: 0;
    font-size:1.7em;
 }
 .container1{
-background-color: rgb(147, 142, 142);
+/*background-color: rgb(147, 142, 142);*/
+background-color: #6c6c6c;
 width: 100%;
 height: 20em;
 display: flex;
@@ -279,7 +281,8 @@ align-items: center;
       height: 600px;
       display: flex;
       flex-wrap: wrap;
-      background-color: rgb(225, 170, 242);
+      /*background-color: rgb(225, 170, 242);*/
+      background-color: #6c6c6c;
    }
 
    .elemento{
@@ -369,7 +372,8 @@ align-items: center;
       height: 100%;
       display: flex;
       flex-wrap: wrap;
-      background-color: rgb(225, 170, 242);
+      /*background-color: rgb(225, 170, 242);*/
+      background-color: #6c6c6c;
    }
 
    .elemento{
