--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,8 @@ body{
    display: flex;
    flex-direction: column;
    /*background-color: rgb(147, 142, 142);*/
-   background-color: #6c6c6c;
+/*    background-color: #6c6c6c; */
+    background-image: linear-gradient(rgb(255, 174, 65), rgb(241, 85, 42));
 }
 
 img{
@@ -126,7 +127,8 @@ h3{
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #6c6c6c;/* NOTE: Necesita el fondo */
+/*     background: #6c6c6c;NOTE: Necesita el fondo */
+   background-color: transparent;
 
     /* Center slide text vertically */
     display: -webkit-box;
@@ -193,7 +195,8 @@ top: 0;
 }
 .container1{
 /*background-color: rgb(147, 142, 142);*/
-background-color: #6c6c6c;
+/* background-color: #6c6c6c; */
+background-color: transparent;
 width: 100%;
 height: 20em;
 display: flex;
@@ -212,6 +215,7 @@ align-items: center;
 .mapa{
   font-size: 4.5em;
 }
+
 
 #gmap{
    width: 80%;
