--- a/estilos.css
+++ b/estilos.css
@@ -8,6 +8,7 @@ body{
    flex-direction: column;
    /*background-color: rgb(147, 142, 142);*/
    background-color: #6c6c6c;
+   /*background-color: rgb(255, 225, 20);*/
 }
 
 img{
@@ -214,13 +215,14 @@ align-items: center;
 }
 
 #gmap{
-   width: 80%;
-   height: 450px;
+   width: 50%;
+   height: 400px;
    max-width: 100%;
    max-height: 100vh;
    box-shadow: 2px 2px 2px 2px;
    margin-bottom: 20px;
 }
+
 .social{
    width: 100%;
    height: auto;
